--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
   },
   "homepage": "https://github.com/premkumar-555/Nalanda_book_management_system_server#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.2"
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.2",
+    "validator": "^13.15.26",
+    "winston": "^3.19.0"
   }
 }
